--- a/src/header/header.css
+++ b/src/header/header.css
@@ -3,22 +3,32 @@ header {
     width: 100%;
     justify-content: space-between;
     align-items: center;
-  }
+}
   
-  .add-title {
-      color: blue;
-      font-weight: 900;
-    }
-  
-    nav a {
-      display: inline-block;
-      padding: 0 1rem 0 1rem;
-      text-transform: uppercase;
-      text-decoration: none;
-      font-weight: bold;
-      color: black;
-    }
+.add-title {
+    color: blue;
+    font-weight: 900;
+    padding-left: 1rem;
+}
+
+.novinky {
+    color: red;
+    background-color: yellow;
+    padding: 0.5rem 1rem;
+    font-weight: 600;
+}
+
+
+nav a {
+    display: inline-block;
+    padding: 1rem 1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    color: blue;
     
-    nav a:hover {
-      color: blue;
-    }
+}
+    
+nav a:hover {
+   color: red;
+}
